# zimfree

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.json
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/app/: db.py  main.py  ml.py  schema.py
backend/app/routers/: assistant.py  congestion.py  luggage.py  route.py  scenario.py  stations.py
backend/app/services/: assistant.py  congestion.py  luggage.py  route.py  scenario.py  stations.py
backend/models/: congestion_meta.json  metrics.json  route_difficulty_meta.json
backend/scripts/: preprocess.py  train_congestion.py  train_route_difficulty.py
backend/tests/: test_api.py  test_models.py  test_preprocess.py
data/raw/: README.txt
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: BoardingCard.tsx  ChargerList.tsx  ChatWindow.tsx  CongestionBadge.tsx  LuggageDecisionCard.tsx  LuggageProfileForm.tsx  OutageToggle.tsx  StationSelect.tsx  WarningBanner.tsx
frontend/src/pages/: Assistant.tsx  MapView.tsx  Planner.tsx  Result.tsx
