[project]
name = "zimfree-backend"
version = "0.1.0"
description = "ZimFree backend — FastAPI + ML for Busan subway luggage copilot"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.2",
    "numpy>=1.26",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "anthropic>=0.40",
    "openai>=1.40",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
